src/np222kk/dv507/a2/test/cases/positive/test_string.ofp
# test_string

void main() {
    string s = "some string";
    int i = s.length;
    char c = s[i-1];
}