src/np222kk/dv507/a2/test/cases/negative/test_neg_arrays_01.ofp
# test_neg_arrays

void main() {
    string[] a;
    bool[] b;
    int[][] c;
}